--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,21 @@ subprojects {
 	sourceSets {
 		main {
 			java {
-				srcDir 'source/java'
+				srcDir sourceJavaDir
 			}
 		}
 	}
 
 	repositories { 
 		flatDir {
-			dirs 'libs'
+			dirs libsDir
 		}
 		mavenCentral()  
 	}
 
 	dependencies {
 		
-		compile fileTree(dir: 'libs', include: '*.jar')
+		compile fileTree(dir: libsDir, include: '*.jar')
 		
 		compile fileTree(dir: 'libs/test', include: '*.jar')
 		compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'		
@@ -32,11 +32,11 @@ subprojects {
 				
 		// Clean out any existing jars
 		ant.delete {
-			ant.fileset(dir: 'libs', includes: '*.jar')
+			ant.fileset(dir: libsDir, includes: '*.jar')
 		}		
 	
 		// Unpack WAR
-		ant.unzip(src: warFile, dest: 'libs') {
+		ant.unzip(src: warFile, dest: libsDir) {
 			ant.patternset {
 				ant.include(name: '**/*.jar')
 			}
