RM:  Build scripts
  * war expanded in entirety and dependancies used as needed
  * Eclipse projects now building
  * Eclipse runtime helthier since have access to expanded WAR 'config' files on projects classpath
  * Custom Groovy task class added to construct AMP's
  * AMPs for both server and client build as part of the standard java 'assemble' task (called during 'build')
  * TODO check AMPs deploy
  * TODO extract properties
  * TODO construct correct Jar and Amp names based on version, etc



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@34706 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,39 @@
+class AMPTask extends DefaultTask {
+
+    def String dist = 'build/dist'
+	def String amp = null
+	def String module = null
+	def String jar = null
+	def String config = 'config'
+	def String web = 'source/web'
+	
+	@TaskAction
+	def assembleAMP() {
+	
+		// assemble the AMP file
+		ant.zip(destfile: dist + '/' + amp, update: 'true') {			
+		
+			ant.zipfileset(file: module + '/module.properties')
+			ant.zipfileset(file: module + '/file-mapping.properties')
+			
+			if (jar != null) {
+				ant.zipfileset(file: jar, prefix: 'lib')
+			}
+			
+			if (config != null) {
+				ant.zipfileset(dir: config, prefix: 'config') {
+					ant.exclude(name: '**/module.properties')
+					ant.exclude(name: '**/file-mapping.properties')
+				}
+			}
+			
+			if (web != null) {			
+				ant.zipfileset(file: web, prefix: 'web')
+			}
+		}	
+	}
+}
+
 subprojects {
 
 	apply plugin: 'java'	
@@ -48,43 +84,18 @@ subprojects {
 		}
 	}	
 	
-	task amp << {}
+	task amp(type: AMPTask)
+	
+	amp.doFirst {	
+		// ensure the dist directory exists
+		def distDir = file(dist)
+		if (distDir.exists() == false) {
+			distDir.mkdir()
+		}
+	}
 
 	assemble.doLast {
 		tasks.amp.execute()
-	}	
-}
-
-
-void assembleAmp(amp, module, jar, config, web){	
-	
-	ant.zip(destfile: amp, update: 'true') {			
-	    
-		def moduleProperties = module + '/module.properties'
-		def fileMapping = module + '/file-mapping.properties'
-		
-		if (file(moduleProperties).exists() == true) {
-			ant.zipfileset(file: moduleProperties)
-		}
-		
-		if (file(fileMapping).exists() == true) {
-			ant.zipfileset(file: fileMapping)
-		}
-		
-		if (jar != null) {
-			ant.zipfileset(file: jar, prefix: 'lib')
-		}
-		
-		if (config != null) {
-			ant.zipfileset(dir: config, prefix: 'config') {
-				ant.exclude(name: '**/module.properties')
-				ant.exclude(name: '**/file-mapping.properties')
-			}
-		}
-		
-		if (web != null) {			
-			ant.zipfileset(file: web, prefix: 'web')
-		}
 	}
+	
 }
-
