--- a/rm-share/config/module/file-mapping.properties
+++ b/rm-share/config/module/file-mapping.properties
@@ -6,10 +6,9 @@
 # 'true', i.e. the default mappings will be augmented or modified by values in
 # this file.
 #
-include.default=false
+include.default=true
 
 #
 # Custom mappings.  If 'include.default' is false, then this is the complete set.
 #
-/WEB-INF=/WEB-INF
 /web=/
