--- a/rm-share/gradle.properties
+++ b/rm-share/gradle.properties
@@ -1,2 +1,5 @@
-warFile=war/share.war
-warFileName=Share
+FILE_WAR=share.war
+WAR_BASE_NAME=share
+JAR_NAME=alfresco-rm-share-2.0
+AMP_NAME=alfresco-rm-share-2.0.amp
+
