--- a/rm-share/build.gradle
+++ b/rm-share/build.gradle
@@ -1,8 +1,26 @@
-amp {
-	amp 'rm-share.amp'
-	module 'config/module'
-	jar 'build/libs/rm-share.jar'
+dependantWar.warName = 'share.war'
+dependantWar.warFile = file('share.war')
+
+tomcatRun.httpPort = 8081
+tomcatRun.stopPort = 8086
+prepTomcat.warName = 'share.war'
+war.baseName = 'share'
+
+jar.baseName = JAR_NAME
+
+amp.amp = AMP_NAME
+amp.module = 'config/module'
+amp.jar = "build/libs/${JAR_NAME}.jar"
+amp.web = 'source/web'
+
+installAmp.ampFileLocation = file('build/dist/' + AMP_NAME)
+installAmp.warFileLocation = file('build/tomcat/share.war')
+
+copyWar {
+	from 'share.war'
+	into 'build/tomcat'
 }
-	
+
+
 
 	
