--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,91 @@
 buildscript {
 
 	repositories {
-		add(new org.apache.ivy.plugins.resolver.URLResolver()) {
-			name = 'GitHub'
-			addArtifactPattern 'http://cloud.github.com/downloads/[organisation]/[module]/[module]-[revision].[ext]'
-		}	
 		flatDir {
 			dirs 'mmt'
 		}	
 	}
 
 	dependencies {
-		classpath 'bmuschko:gradle-tomcat-plugin:0.9.1'
 		classpath fileTree(dir: 'mmt', include: '*.jar')  
 	}
 }
 
-/** Wrapper task */
-task wrapper(type: Wrapper) {
-	gradleVersion = '0.9'
-}
-
 /** Subproject configuration */
-
 subprojects {
 
 	apply plugin: 'java'	
-	apply plugin: 'eclipse'
-	apply plugin: 'tomcat'
 	
 	sourceCompatibility = 1.6
     targetCompatibility = 1.6
 	
-	task dependantWar		
 	explodedDepsDir = 'explodedDeps'	
-	dependantWar.explodedDir = file(explodedDepsDir)
-	dependantWar.explodedLibDir = file("${explodedDepsDir}/lib")
-	dependantWar.explodedConfigDir = file("${explodedDepsDir}/config")
+	explodedLibsDir = "${explodedDepsDir}/lib"
+	buildDistDir = 'build/dist'
+	buildLibDir = 'build/libs'
+	sourceJavaDir = 'source/java'
+	sourceWebDir = 'source/web'
+	configDir = 'config'
+	configModuleDir = "config/alfresco/module/${moduleid}"
+	moduleProperties = 'module.properties'
+	fileMapping = 'file-mapping.properties'
+	baseName = "${groupid}-${appName}-${version}"
+	jarFile = "${baseName}.jar"
+	ampFile = "${baseName}.amp"
 		
 	sourceSets {
 		main {
 			java {
-				srcDir 'source/java'
+				srcDir sourceJavaDir
 			}
 		}
 	}
 
 	repositories { 
+	
 		flatDir {
-			dirs dependantWar.explodedLibDir
+			dirs explodedLibsDir
 		}
 		mavenCentral()
 	}
 	
 	dependencies {		     		
 		
-		providedCompile fileTree(dir: dependantWar.explodedLibDir, include: '*.jar')     	
-	
-		def tomcatVersion = '6.0.29'
-		tomcat "org.apache.tomcat:catalina:${tomcatVersion}",
-    	       "org.apache.tomcat:coyote:${tomcatVersion}",
-               "org.apache.tomcat:jasper:${tomcatVersion}",
-			   'postgresql:postgresql:9.0-801.jdbc4'  	
+		compile fileTree(dir: explodedLibsDir, include: '*.jar')     	
 	}	
 	
-	/* --- Compile tasks */
+	/** --- Compile tasks --- */
 	
+	// make sure that the dependancies have been unpacked before compiling the Java
 	compileJava.doFirst {
 		explodeDeps.execute()
 	}
 	
-	/* --- Dependancy tasks --- */
+	jar.archiveName = jarFile
 	
+	/** --- Dependancy tasks --- */
+				
 	task explodeDeps << {
 	
-		if (dependantWar.warFile.exists() == true) {
+		explodedDir = file(explodedDepsDir)
+		explodedLibDir = file(explodedLibsDir)
+		explodedConfigDir = file("${explodedDepsDir}/config")
+		warFileObj = file(warFile)
+	
+		if (warFileObj.exists() == true) {
 			
-			println "${dependantWar.warName} was found.  Checking dependancies ..."
+			logger.lifecycle "${warFile} was found.  Checking dependancies ..."
 			
-			if (dependantWar.explodedDir.exists() == false) {
-				println(" ... creating destination dir ${dependantWar.explodedDir}")
-				dependantWar.explodedDir.mkdir()
+			if (explodedDir.exists() == false) {
+				println(" ... creating destination dir ${explodedDir}")
+				explodedDir.mkdir()
 			}
 			
-			if (isUnpacked(dependantWar.explodedLibDir) == false) {
+			if (isUnpacked(explodedLibDir) == false) {
 			
-				println(" ... unpacking libs into ${dependantWar.explodedLibDir}")
+				println(" ... unpacking libs into ${explodedLibDir}")
 				
-				ant.unzip(src: dependantWar.warFile, dest: dependantWar.explodedLibDir) {
+				ant.unzip(src: warFileObj, dest: explodedLibDir) {
 					ant.patternset {
 						ant.include(name: 'WEB-INF/lib/*.jar')
 					}
@@ -95,109 +93,113 @@ subprojects {
 				}
 			}
 			
-			if (isUnpacked(dependantWar.explodedConfigDir) == false) {
+			if (isUnpacked(explodedConfigDir) == false) {
 			
-				println(" ... unpacking config into ${dependantWar.explodedConfigDir}")
+				println(" ... unpacking config into ${explodedConfigDir}")
 				
-				ant.unzip(src: dependantWar.warFile, dest: dependantWar.explodedDir) {
+				ant.unzip(src: warFileObj, dest: explodedDir) {
 					ant.patternset {
 						ant.include(name: 'WEB-INF/classes/**/*')
 					}
 				}
 				
 				copy {
-					from "${dependantWar.explodedDir}/WEB-INF/classes"
-					into dependantWar.explodedConfigDir
+					from "${explodedDir}/WEB-INF/classes"
+					into explodedConfigDir
 				}
 				
 				// TODO understand why this doesn't delete the folder as expected
 				ant.delete(includeEmptyDirs: 'true') {
-					ant.fileset(dir: "${dependantWar.explodedDir}/WEB-INF", includes: '**/*')			
+					ant.fileset(dir: "${explodedDir}/WEB-INF", includes: '**/*')			
 				}
 			}
 		}
 		else {			
-			println "Dependant WAR file ${dependantWar.warName} can not be found.  Please place it in ${dependantWar.warFile.getPath()} to continue."
+			println "Dependant WAR file ${warName} can not be found.  Please place it in ${warFile.getPath()} to continue."
 		}		
 	}
-	
+		
 	task cleanDeps << {
 		ant.delete(includeEmptyDirs: 'true') {
-			ant.fileset(dir: dependantWar.explodedDir, includes: '**/*')
+			ant.fileset(dir: explodedDepsDir, includes: '**/*')
 		}
-	}		
+	}	
 	
 	/** --- AMP tasks --- */
 	
-	task copyWar(type: Copy)
+	task copyWar(type: Copy) {
+		from warFile
+		into buildDistDir
+	}
 	
 	task amp(dependsOn: 'jar') << {
 	
-		// TODO set the inputs and outputs
-	
-		// assemble the AMP file
-		ant.zip(destfile: dist + '/' + amp, update: 'true') {			
+		def jarFilePath = "${buildLibDir}/${jarFile}"
+		def jarFileObj = file(jarFilePath)
+		def configDirObj = file(configDir)
+		def sourceWebObj = file(sourceWebDir)
 		
-			ant.zipfileset(file: module + '/' + moduleProperties)
-			ant.zipfileset(file: module + '/' + fileMapping)
+		// assemble the AMP file
+		ant.zip(destfile: "${buildDistDir}/${ampFile}", update: 'true') {			
+		
+			ant.zipfileset(file: "${configModuleDir}/${moduleProperties}")
+			ant.zipfileset(file: "${configModuleDir}/${fileMapping}")
 			
-			if (jar != null) {
-				ant.zipfileset(file: jar, prefix: jarDest)
-			}
+			if (jarFileObj.exists()) {
 			
-			if (config != null) {
-				ant.zipfileset(dir: config, prefix: configDest) {
+				logger.info("Adding ${jarFilePath} to ${ampFile} in /lib")
+				ant.zipfileset(file: jarFilePath, prefix: 'lib')
+			} 
+
+			if (configDirObj.exists() == true) {
+			
+				logger.info("Adding ${configDir} to ${ampFile} in /config")
+				
+				ant.zipfileset(dir: configDir, prefix: 'config') {
 					ant.exclude(name: '**/' + moduleProperties)
 					ant.exclude(name: '**/' + fileMapping)
 				}
 			}
 			
-			if (web != null) {			
-				ant.zipfileset(dir: web, prefix: webDest)
+			if (sourceWebObj.exists() == true) {		
+				
+				logger.info("Adding ${sourceWebDir} to ${ampFile} in /web")
+			
+				ant.zipfileset(dir: sourceWebDir, prefix: 'web')
 			}
 		}	
 	}
 	
-	amp.dist = 'build/dist'
-	amp.config = 'config'
-	amp.moduleProperties = 'module.properties'
-	amp.fileMapping = 'file-mapping.properties'
-	amp.jarDest = 'lib'
-	amp.configDest = 'config'
-	amp.webDest = 'web'
-	amp.web = null
-	
 	task installAmp(dependsOn: ['amp', 'copyWar']) << {
+		
+		def warFileLocation = file("${buildDistDir}/${warFile}")
+		def ampFileLocation = file("${buildDistDir}/${ampFile}")
+		
 		mmt = new org.alfresco.repo.module.tool.ModuleManagementTool()
 		mmt.setVerbose(true)		
 		mmt.installModule(ampFileLocation.getPath(), warFileLocation.getPath(), false, true, false)
 	}
 	
-	/** --- WAR/Tomcat configuration --- */
-	
-	war.doFirst {
-		throw new StopExecutionException();
+	task cleanDeploy(type: Delete) {
+		delete "${tomcatRoot}/webapps/${webAppName}", "${tomcatRoot}/webapps/${warFile}"
 	}
 	
-	war.destinationDir = file('build/tomcat')
+	task deployAmp(dependsOn: ['cleanDeploy', 'installAmp']) << {
 	
-	task prepTomcat << {
-		
-		copy {
-			from zipTree("build/dist/${warName}")
-			into 'build/tomcat'
-		}
-		if (warName.equals('alfresco.war') == true) {
+		println tomcatRoot
+		tomcatRootDir = new File(tomcatRoot)
+		if (tomcatRootDir.exists() == true) {
+			
+			// copy war
 			copy {
-				from 'data/dev-context.xml'
-				into 'build/tomcat/WEB-INF/classes/alfresco/extension'
+				from "${buildDistDir}/${warFile}"
+				into "${tomcatRoot}/webapps"
 			}
-		}
+		} 
+		else {
+			println "Tomcat root directory ${tomcatRoot} does not exist."
+		}		
 	}
-	
-	tomcatRun.dependsOn prepTomcat	
-	tomcatRun.webAppSourceDirectory = file('build/tomcat')
-	tomcatRun.uriroot = 'build/tomcat'
 }
 
 /** Utility function - indicates wether the provided dir is unpacked (ie exists and has some contents) */
