--- a/rm-share/gradle.properties
+++ b/rm-share/gradle.properties
@@ -1,5 +1,10 @@
-FILE_WAR=share.war
-WAR_BASE_NAME=share
-JAR_NAME=alfresco-rm-share-2.0
-AMP_NAME=alfresco-rm-share-2.0.amp
+groupid=alfresco
+appName=rm-share
+version=2.0
 
+moduleid=org_alfresco_module_rm_share
+
+tomcatRoot=C:/mywork/projects/rmhead/software/tomcat-app
+
+webAppName=share
+warFile=share.war
