RM build scripts:
  * Error message has incorrect variable references



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@34907 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ subprojects {
 			}
 		}
 		else {			
-			println "Dependant WAR file ${warName} can not be found.  Please place it in ${warFile.getPath()} to continue."
+			println "Dependant WAR file ${warFile} can not be found.  Please place it in ${warFileObj.getPath()} to continue."
 		}		
 	}
 		
