RM build scripts:
  * deployAmp tasks configured to use the TOMCAT_HOME and APP_TOMCAT_HOME evnVars for the rm-server and rm-share projects respectively. (so things work easily when using the DevEnv)

  * ReadMe.txt added with steps to setup and use the RM gradle scripts (will copy this up to the RM 2.0 site on ts as well)



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@34910 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ subprojects {
 	baseName = "${groupid}-${appName}-${version}"
 	jarFile = "${baseName}.jar"
 	ampFile = "${baseName}.amp"
+	tomcatRoot = System.getenv(tomcatEnv)
 		
 	sourceSets {
 		main {
@@ -187,7 +188,6 @@ subprojects {
 	
 	task deployAmp(dependsOn: ['cleanDeploy', 'installAmp']) << {
 	
-		println tomcatRoot
 		tomcatRootDir = new File(tomcatRoot)
 		if (tomcatRootDir.exists() == true) {
 			
