--- a/rm-share/gradle.properties
+++ b/rm-share/gradle.properties
@@ -4,7 +4,7 @@ version=2.0
 
 moduleid=org_alfresco_module_rm_share
 
-tomcatRoot=C:/mywork/projects/rmhead/software/tomcat-app
-
 webAppName=share
 warFile=share.war
+
+tomcatEnv=APP_TOMCAT_HOME
