RM Build Scripts:
 * generated gradle wrapper scripts for windows and linux
 * build tasks can now be called using 'gradlew' and any required Gradle dependancies will automatically be downloaded.  Gradle is not required to be installed.
 * hopefully 'gradlew' can be used by Bamboo as a command task, as it doesn't have native Gradle support installed
 * updated ReadMe.txt with new information



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@35068 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ buildscript {
 	}
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.0-milestone-8'
+}
+
 /** Subproject configuration */
 subprojects {
 
