--- a/rm-share/.classpath
+++ b/rm-share/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-core-4.0.d.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-jlan-embed-4.0.d.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-opencmis-extension-0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-share-4.0.d.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-share-4.0.d.jar" sourcepath="C:/mywork/projects/v4/code/root/projects/slingshot"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-web-framework-commons-4.0.d.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/axiom-api-1.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/axiom-impl-1.2.5.jar"/>
