--- a/build.gradle
+++ b/build.gradle
@@ -102,8 +102,8 @@ subprojects {
 	task fetchWarFile(type:Copy) {
 		from configurations.testRuntime
 		into '.'
-		include 'alfresco*.war'
-		rename { String filename -> 'alfresco.war' }
+		include '*.war'
+		rename { String filename -> warFile }
 	}
 		
 	// make sure that the dependancies have been unpacked before compiling the Java
