RM Form Refactor/Bug Fixes:
 * Updated implementation of form filters to include custom properties and custom record aspect properties
 * Overide FormUIGet web script implementation to include custom properties (and custom record meta-data aspects) despite now using a 'show' strategy for the form defintions.
 * Added a RM 'kind' config evaluator.  This allows us to provide a form definition for the different 'kinds' of RM artifacts which are automatically merged with the core form related to the content type.  This is especially useful for records as we can now support the correct display of extended content types and content with additional aspects.
 * Added rm metadata web script to support the kind config evaluator.
 * Re-factored all form definitions into 'kinds' and core types where appropriate ... means implementors can extend our core RM types and still have the correct Rm information displayed whilst defining their own forms for their new types.
 * Separated out the DOD specific form parts for the record kind.
 * Non-electronic document form added (and auto-includes record kind form)
 * relates to RM-269 and RM-137



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@36154 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/.classpath
+++ b/rm-share/.classpath
@@ -9,11 +9,7 @@
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/abdera-i18n-0.4.0-incubating.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/abdera-parser-0.4.0-incubating.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/activation-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-core-4.0.d.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-jlan-embed-4.0.d.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-opencmis-extension-0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-share-4.0.d.jar" sourcepath="C:/mywork/projects/v4/code/root/projects/slingshot"/>
-	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/alfresco-web-framework-commons-4.0.d.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/axiom-api-1.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/axiom-impl-1.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/chemistry-opencmis-client-api-0.6.0.jar"/>
@@ -75,5 +71,9 @@
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/stax-ex-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/streambuffer-0.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/mywork/projects/rmhead/code/rm-share/explodedDeps/lib/urlrewritefilter-3.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-core-4.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-jlan-embed-4.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-share-4.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-web-framework-commons-4.0.1.jar" sourcepath="C:/mywork/projects/v4/code/root/projects/web-framework-commons/source/java"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
