--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -39,9 +39,9 @@ label.set.photoRecord=Photographic Record
 label.set.webRecord=Web Record
 label.set.correspondence=Correspondence
 label.set.security=Security
-label.set.vitalRecord=Vital Record Information
+label.set.vitalRecord=Vital Record
 label.set.disposition=Disposition
-label.set.customMetadata=Custom Metadata
+label.set.customMetadata=Custom Properties
 
 label.recordLevelDisposition=Applied to
 label.record=Record
