RM-263: Issue when we set disposition schedule based on Publication Date
  * refactored the way disposition properties work
  * now additional disposition date properties are sprung in and registered in the disposition service
  * each disposition property bean looks after updating the disposition asof date when the date property changes
  * defaults to null date if can not be calculated
  * unit test for new method and this issue
  * also updated build scripts to successfully run unit test .. will gradually add in other unit tests as their reliability is improved



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@36222 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ subprojects {
 	sourceJavaDir = 'source/java'
 	sourceWebDir = 'source/web'
 	testJavaDir = 'test/java'
-	testResourceDir = 'test/resource'
+	testResourceDir = 'test/resources'
 	configDir = 'config'
 	configModuleDir = "config/alfresco/module/${moduleid}"
 	moduleProperties = 'module.properties'
@@ -98,13 +98,6 @@ subprojects {
 	}	
 	
 	/** --- Compile tasks --- */
-
-	task fetchWarFile(type:Copy) {
-		from configurations.testRuntime
-		into '.'
-		include '*.war'
-		rename { String filename -> warFile }
-	}
 		
 	// make sure that the dependancies have been unpacked before compiling the Java
 	compileJava.doFirst {
@@ -114,6 +107,13 @@ subprojects {
 	jar.archiveName = jarFile
 	
 	/** --- Dependancy tasks --- */
+	
+	task fetchWarFile(type:Copy) {
+        from configurations.testRuntime
+        into '.'
+        include '*.war'
+        rename { String filename -> warFile }
+	}
 
 	task explodeDeps << {
 	
@@ -122,6 +122,7 @@ subprojects {
 		explodedConfigDir = file("${explodedDepsDir}/config")
 		warFileObj = file(warFile)
 	
+		// if the WAR file still isn't there raise an error
 		if (warFileObj.exists() == true) {
 			
 			logger.lifecycle "${warFile} was found.  Checking dependancies ..."
