RM-306: Move to action works incorrectly
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@36224 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/.classpath
+++ b/rm-share/.classpath
@@ -75,5 +75,6 @@
 	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-jlan-embed-4.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-share-4.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="explodedDeps/lib/alfresco-web-framework-commons-4.0.1.jar" sourcepath="C:/mywork/projects/v4/code/root/projects/web-framework-commons/source/java"/>
+	<classpathentry kind="lib" path="explodedDeps/lib/abdera-client-0.4.0-incubating.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
