Fix build failing when checkout folder contains a dot
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@37518 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -223,7 +223,7 @@ subprojects {
 		
 		tree.each {File file ->
 				
-			destinationFile = new File(file.getPath().replaceFirst('\\.', '-min.'))
+			destinationFile = new File(file.getPath().replaceFirst('\\.js', '-min.js'))
 			
 			file.withReader{ reader -> 
 				compressor = new com.yahoo.platform.yui.compressor.JavaScriptCompressor(reader, null)
