RM Build Scripts:
* add eclipse plugin




git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@37838 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ task packageBuild (dependsOn: [':rm-server:amp', ':rm-share:amp']) << {
 subprojects {
 
 	apply plugin: 'java'	
+	apply plugin: 'eclipse'
 	
 	sourceCompatibility = 1.6
     targetCompatibility = 1.6
