Fix RM build by making it depend on Alfresco 4.0.3-SNAPSHOT (will need to depend on 4.0.2 when it's released)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@37916 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ subprojects {
 		}
 		mavenCentral()
 		maven {
-			url "http://maven.alfresco.com/nexus/content/repositories/enterprise-releases/"
+			url "https://artifacts.alfresco.com/nexus/content/groups/internal"
 			credentials {
 				username 'bamboo'
 				password 'b@mb00'
@@ -176,9 +176,7 @@ subprojects {
 	}
 		
 	task cleanDeps << {
-		ant.delete(includeEmptyDirs: 'true') {
-			ant.fileset(dir: explodedDepsDir, includes: '**/*')
-		}
+		ant.delete(includeEmptyDirs: 'true', dir: explodedDepsDir)
 	}	
 	
 	/** --- AMP tasks --- */
