RM-199: Renamed "Description" link to be "View Description" (on disposition details)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@38031 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get.properties
@@ -14,7 +14,7 @@ label.title.noTime={0} {1}
 label.title.complex={0} after {1} {2}(s)
 label.nodescription=&lt;none&gt;
 
-link.description=Description
+link.description=View Description
 
 button.addevent=Add Event
 
