RM-211: Improved error messages when failures occur creating folders and categories
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@38040 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
@@ -49,7 +49,8 @@ message.multiple-delete.success=Successfully deleted {0} item(s)
 title.multiple-delete.confirm=Confirm Multiple Delete
 message.multiple-delete.confirm=Are you sure you want to delete the following {0} items?
 message.multiple-delete.please-wait=Please wait. Files being deleted...
-message.new-folder.failure=Could not create ''{0}''
+message.new-folder.failure=Could not create folder
+message.new-category.failure=Could not create category
 message.new-folder.success=Folder ''{0}'' created
 message.new-record.failure=Could not create ''{0}''
 message.new-record.success=Record ''{0}'' created
