Fix build: set source encoding to UTF-8
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@38041 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,7 @@ subprojects {
 	compileJava.doFirst {
 		explodeDeps.execute()
 	}
+	compileJava.options.encoding = 'UTF-8'
 	
 	jar.archiveName = jarFile
 	
