Fix build: set source encoding for test sources as well
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@38060 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,7 @@ subprojects {
 		explodeDeps.execute()
 	}
 	compileJava.options.encoding = 'UTF-8'
+	compileTestJava.options.encoding = 'UTF-8'
 	
 	jar.archiveName = jarFile
 	
