RM-92: Prevent users from being able to create duplicate lists
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@38290 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get.properties
@@ -21,6 +21,8 @@ message.empty.values=Enter an value in the text field and click 'Add'.
 message.empty.access=Click 'Add' to give access to the value for a group or user
 message.error=Could not load data
 message.addvalue.failure=Could not add value ''{0}''
+message.addlist.failure.title=Failed to add list
+message.addlist.failure.text=Could not add list: {0}
 message.confirm.removevalue.title=Remove value
 message.confirm.removevalue.text=Are you sure you want to remove ''{0}''?
 message.deletevalue.failure=Failed to delete value.
