RM-411: There are two "Image Size X" labels in Record's Search menu "Select"
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@38395 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -251,7 +251,7 @@ label.dod.photographer=Photographer
 label.dod.copyright=Copyright
 label.dod.bitDepth=Bit Depth
 label.dod.imageSizeX=Image Size X
-label.dod.imageSizeY=Image Size X
+label.dod.imageSizeY=Image Size Y
 label.dod.imageSource=Image Source
 label.dod.compression=Compression
 label.dod.iccIcmProfile=ICC/ICM Profile
